--- a/src/web/package.json
+++ b/src/web/package.json
@@ -1,7 +1,8 @@
 {
   "name": "web",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://nhaynes84.github.io/avail-frontend-take-home",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
@@ -26,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
